force-app/main/default/objects/Employee_Skills__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the skill of the employee</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>