force-app/main/default/objects/Employee_Skills__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The email of employee that submitted the request</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>