force-app/main/default/objects/Employee_Skills__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field shows if the skill is certified or not.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Non-Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>